# narcolepsy-detector

./: .gitignore  CHANGELOG-data_master.md  Makefile  README.md  activate_env.sh  create_scale_n_dataset.py  environment.yml  evaluate_gp_model.py  extract_features.py  feature_descriptions.py  feature_selection.py  filtered_features.csv  get_model_features.py  inf_extract_features.py  narco_biomarker.py  narcolepsy_GP.py  narcolepsy_feature_selection.py  prepare_data.py  pyproject.toml  run_file.py  sc_eval.py  setup.cfg  sync_files.sh  train_gp_model.py
models/no-smote_all-features_scale-std_fs-f1/r0000-25_nosmote_all-features_scale-std_fs-f1/: settings.json
models/no-smote_all-features_scale-std_fs-f1/r0000-50_nosmote_all-features_scale-std_fs-f1/: settings.json
models/no-smote_all-features_scale-std_fs-f1/r0000-75_nosmote_all-features_scale-std_fs-f1/: settings.json
narcolepsy_detector/: train.py  train_ensemble.py  train_single_model.py  train_slurm.py
narcolepsy_detector/evaluate/: __main__.py  evaluate_single_model.py
narcolepsy_detector/inference/: __init__.py  __main__.py
narcolepsy_detector/model/: __init__.py  narcolepsy_model.py
narcolepsy_detector/preprocessing/: __main__.py  functions.py  slurm.py
narcolepsy_detector/utils/: __init__.py  adjusted_aucpr.py  adjusted_f1.py  argparser.py  constants.py  feature_descriptions.py  feature_extraction.py  logger.py  match_data.py  plotting_utils.py  rolling_window.py  specific_sensitivity.py
notebooks/: analysis-nrem_fragmentation.ipynb  analysis-sorem_features.ipynb  analysis_entropy.ipynb  analysis_feature-selection.ipynb  analysis_mixed-states.ipynb  data_search.ipynb  figure_resolution_acc.ipynb  sanitize_datamaster.ipynb
output/: predictions.csv
scripts/: evaluate_ensemble.sh  submit_dataprep_jobs.py  submit_feature_selection.py  submit_jobs.py
tools/: channel_label_identifier.py
utils/: __init__.py  feature_extraction.py  match_data.py  plotting_utils.py
(+6191 files in other folders)
