[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narcolepsy-detector"
version = "1.0.0"
authors = [{name = "Alexander Neergaard Zahid", email = "aneol@dtu.dk"}]
description = "Predicting narcolepsy type 1 from high-frequency hypnodensities."
requires-python = ">=3.10"
dependencies = [
    "gpflow == 2.6.4",
    "imbalanced-learn",
    "matplotlib",
    "numpy < 2",
    "pandas",
    "PyWavelets",
    "tensorflow-probability == 0.21",
    "tqdm",
    "scikit-image",
    "scikit-learn == 1.2.1",
]

[project.scripts]
nt1-inference = "narcolepsy_detector.inference:main_cli"

[tool.setuptools]
packages = ["narcolepsy_detector"]
