[metadata]
name = narcolepsy-detector
version = 0.1.0
author = Alexander Neergaard Zahid
author_email = aneol@dtu.dk
license = MIT
description = Predicting narcolepsy from hypnodensity graphs.

[options]
# package_dir=
#     = narcolepsy_detector
packages = find:
python_requires = >=3.6

# [options.packages.find]
# where=narcolepsy_detector